--- a/Ebuy/shop/templates/shop/basic.html
+++ b/Ebuy/shop/templates/shop/basic.html
@@ -14,11 +14,10 @@
 
     <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
       
-  <a class="navbar-brand" href="/"><img src="\media\shop\images\About\5.gif" alt="" style="height: 9vh;margin-left: 2vw;margin-right: 2vw;">MyCart</a>
+  <a class="navbar-brand" href="/shop/"><img src="\media\shop\images\About\5.gif" alt="" style="height: 9vh;margin-left: 2vw;margin-right: 2vw;">MyCart</a>
   <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
     <span class="navbar-toggler-icon"></span>
   </button>
-
   <div class="collapse navbar-collapse" id="navbarSupportedContent">
     <ul class="navbar-nav mr-auto">
       <li class="nav-item active">
