--- a/Ebuy/shop/templates/shop/index.html
+++ b/Ebuy/shop/templates/shop/index.html
@@ -2,64 +2,6 @@
 {% block title%}{% endblock %}
 {% block css %}
 <style>
-    .col-md-3 {
-        display: inline-block;
-        margin-left: 15px;
-        width: 15vw;
-    }
-
-    .carousel-indicators .active {
-        background-color: rgb(255, 115, 0);
-    }
-
-    .col-md-3 img {
-        width: 5rem;
-        height: 10rem;
-    }
-
-    body .carousel-indicator li {
-        background-color: rgb(255, 115, 0);
-    }
-
-    body .carousel-indicators {
-        bottom: -40px;
-        margin-left: 20vw;
-        margin-right: 25vw;
-    }
-
-    .carousel-indicators li {
-        background-color: rgb(255, 115, 0);
-    }
-
-    body .carousel-control-prev-icon,
-    body .carousel-control-next-icon {
-        background-color: rgb(255, 166, 93);
-        height: 15vh;
-    }
-
-    .carousel-control-prev,
-    .carousel-control-next {
-        top: auto;
-        bottom: auto;
-        padding-top:50vh;
-        margin-left:25vw;
-        width:5vw;
-        height: 2vh;
-    }
-
-    body .no-padding {
-        padding-left: 0;
-        padding-right: 0;
-    }
-    @import "https://fonts.googleapis.com/css?family=Poppins:300,400,500,600,700";
-
-    a,
-    a:hover,
-    a:focus {
-        color: inherit;
-        text-decoration: none;
-        transition: all 0.3s
-    }
 
     .wrapper {
         display: flex;
@@ -80,6 +22,8 @@
         margin-left: -250px
     }
 
+
+
     #sidebar ul p {
         padding: 10px;
         font-size: 15px;
@@ -87,6 +31,7 @@
         color: #fff
     }
 
+    
     #sidebar ul li a {
         padding: 10px;
         font-size: 1.1em;
@@ -164,106 +109,86 @@
             display: none
         }
     }
+    .carousel-wrapper {
+    display: flex;
+    flex-direction: column;
+}
+
+.carousel-container {
+    margin-bottom: 20px; /* Adjust as needed */
+}
+.col-md-3 {
+    display: inline-block;
+    margin-left: 15px;
+    width: 15vw;
+}
+
+.carousel-indicators .active,
+.carousel-indicators li {
+    background-color: rgb(255, 115, 0);
+}
+
+
+
+body .carousel-indicators {
+    bottom: -40px;
+    margin-left: 20vw;
+    margin-right: 25vw;
+    position: sticky;
+    top: 0;
+    background-color: rgb(238, 214, 162);
+}
+
+.carousel-control-prev,
+.carousel-control-next {
+    top: auto;
+    bottom: auto;
+    padding-top: 50vh;
+    margin-left: 25vw;
+    width: 5vw;
+    height: 2vh;
+}
+
+.carousel-control-prev,
+.carousel-control-next {
+    display: none !important; 
+
+}
+    .carousel-indicators .active,
+    .carousel-indicators li {
+        background-color: rgb(153, 0, 255) !important; /* Add !important to override other styles */
+    }
+
+    .content-scroll {
+        max-height: calc(80vh - 40px); /* Adjust max height to account for carousel indicators */
+        overflow-y: auto;
+        overflow-x: hidden;
+    }
+
+    .sidebar-container {
+        height: 100%;
+        overflow-y: auto; /* Enable vertical scrolling for sidebar */
+        background-color: #e45716; /* Adjust sidebar background color */
+        color: #fff;
+    }
 </style>
 {% endblock %}
 {% block body %}
 {% load static %}
-<div class="container" style="padding-top: 5vh; margin-bottom: 1vh;">
-    <div id="carouselExampleIndicators" class="carousel slide" data-ride="carousel">
-        <ol class="carousel-indicators">
-            <li data-target="#carouselExampleIndicators" data-slide-to="0" class="active"></li>
-            <li data-target="#carouselExampleIndicators" data-slide-to="1"></li>
-            <li data-target="#carouselExampleIndicators" data-slide-to="2"></li>
-        </ol>
-        <div class="carousel-inner">
-            <div class="carousel-item active">
-                <img class="d-block w-100" src="\media\shop\images\About\4.gif" alt="First slide" style="height: 65vh;">
-            </div>
-            <div class="carousel-item">
-                <img class="d-block w-100" src="\media\shop\images\About\7.gif" alt="Second slide"
-                    style="height: 65vh;">
-            </div>
-            <div class="carousel-item">
-                <img class="d-block w-100" src="\media\shop\images\About\2.gif" alt="Third slide" style="height: 65vh;">
-            </div>
-            <a class="carousel-control-prev" href="#carouselExampleIndicators" role="button" data-slide="prev">
-                <span class="carousel-control-prev-icon" aria-hidden="true" top="0"></span>
-                <span class="sr-only">Previous</span>
-            </a>
-            <a class="carousel-control-next" href="#carouselExampleIndicators" role="button" data-slide="next">
-                <span class="carousel-control-next-icon" aria-hidden="true"></span>
-                <span class="sr-only">Next</span>
-            </a>
-        </div>
-    </div>
- 
-</div>
+{% include 'shop/departments.html' %}
+
 <div class="wrapper">
-<nav id="sidebar">
-    <ul class="list-unstyled components">
-        <p>MENUS</p>
-        {% for product, range, nSlides in allProds %}
-        <li> <a href="#homeSubmenu" data-toggle="collapse" aria-expanded="false"
-                class="dropdown-toggle">{{product.0.Department }}</a>
-            <ul class="collapse list-unstyled" id="homeSubmenu">                    
-                <li> <a href="#homeSubmenu" data-toggle="collapse" aria-expanded="false"
-                        class="dropdown-toggle">{{product.0.category }}</a>
-                    <ul class="collapse list-unstyled" id="homeSubmenu">
-                        <li> <a href="#">{{product.0.sub_category }}</a> </li>
-                    </ul>
-                </li>                </ul>
-        </li>
-        {% endfor %}
-</nav> 
-<div class="content-wrapper" style="width:95vw;  float: right;background-color:rgb(238, 214, 162) ;">
-<!--Slideshow starts here -->
-{% for product, range, nSlides in allProds %}
-<h5 class="my-4">Flash Sale On {{product.0.category}} - Recommended Items</h5>
-<div class="row">
-    <div id="demo{{forloop.counter}}" class="col carousel slide my-3" data-ride="carousel">
-        <ul class="carousel-indicators">
-            <li data-target="#demo{{forloop.counter}}" data-slide-to="0" class="active"></li>
-            {% for i in range %}
-            <li data-target="#demo{{forloop.parentloop.counter}}" data-slide-to="{{i}}"></li>
-            {% endfor %}
-        </ul>
-        <div class="container carousel-inner no-padding">
-            <div class="carousel-item active">
-                {% for i in product %}
-                <div class="col-xs-3 col-sm-3 col-md-3">
-                    <div class="card align-items-center" style="width: 12rem;">
-                        <img src='/media/{{i.Image}}' class="card-img-top" alt="...">
-                        <div class="card-body">
-                            <h5 class="card-title" id="namepr{{i.id}}" style="font-size: medium;">{{i.product_name|slice:"0:30"}}</h5>
-                            <p class="card-text" style="font-size: small;">{{i.description|slice:"0:40"}}...</p>
-                            <h6 class="card-title">Price: <span id="pricepr{{i.id}}">{{i.price}}</span></h6>
-                            <span id="divpr{{i.id}}" class="divpr">
-                                <button id="pr{{i.id}}" class="btn btn-success cart my-2" style="width: 100%;">Add To Cart</button>
-                            </span>
-                            <a href="/shop/products/{{i.id}}"><button id="qv{{i.id}}"
-                                    class="btn btn-success cart" style="width: 100%;">View</button></a>
-                        </div>
-                    </div>
-                </div>
-                {% if forloop.counter|divisibleby:4 and forloop.counter > 0 and not forloop.last %}
-            </div>
-            <div class="carousel-item">
-                {% endif %}
-                {% endfor %}
-            </div>
-        </div>
-    </div>
-    <!-- left and right controls for the slide -->
-    <a class="carousel-control-prev" href="#demo{{forloop.counter}}" data-slide="prev">
-        <span class="carousel-control-prev-icon"></span>
-    </a>
-    <a class="carousel-control-next" href="#demo{{forloop.counter}}" data-slide="next">
-        <span class="carousel-control-next-icon"></span>
-    </a>
+ 
+
+{% include 'shop/sidebar.html' %}
+
+ {% include 'shop/productcarousel.html' %}
+
+
 </div>
-{% endfor %}
-</div>
-</div>
+
+{% include 'shop/footer.html' %}
+
 {% endblock %}
 {% block js %}
 <script>
